--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -7,6 +7,12 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(SOURCE_FILES
     json.cpp
     json_data.cpp
+    json_null.cpp
+    json_boolean.cpp
+    json_number.cpp
+    json_string.cpp
+    json_array.cpp
+    json_object.cpp
     json_decode.cpp
 )
 
