--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.4)
 
-project(singularity.json)
+project(so.json)
 
 include_directories(../include)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
@@ -16,4 +16,4 @@ set(SOURCE_FILES
     json_decode.cpp
 )
 
-add_library(singularity.json STATIC ${SOURCE_FILES})
+add_library(so.json STATIC ${SOURCE_FILES})
